refactor: fixing sonar high founding